# sam_drivers

./: .gitignore  .gitmodules  20101.SensorPressureStamped.uavcan  20102.ServoFeedbackDouble.uavcan  20104.SwitchCommand.uavcan  20107.DualThrusterRPM.uavcan  20109.DualThrusterFeedback.uavcan  20110.ConsumedChargeFeedback.uavcan  20111.StarOddiCTD.uavcan  20112.BatteryStateBasic.uavcan  20113.CTDFeedback.uavcan  20115.ConsumedChargeArray.uavcan  20117.ThrusterFeedbackID.uavcan  20118.SensorLeak.uavcan  README.md
cm_station_drivers/: CMakeLists.txt  package.xml
cm_station_drivers/config/: cm_mqtt.yaml
cm_station_drivers/launch/: cm_station_core.launch  cm_station_uwcomms.launch  cm_station_uwgps.launch
cm_station_drivers/scripts/: cm_station_bringup.sh
floatsam_drivers/: CMakeLists.txt  package.xml
floatsam_drivers/launch/: floatsam_core.launch  floatsam_mission.launch  floatsam_payloads.launch  floatsam_rosbag.launch
floatsam_drivers/scripts/: floatsam_bringup.sh
sam_architecture/: abstract.tex  architecture.tex
sam_architecture/img/: sam_architecture.tex
sam_drivers/: CMakeLists.txt  package.xml  setup.cfg  setup.py
sam_drivers/config/: cam_board.yml  cam_down.yml  cam_forward.yml  cam_port.yml  cam_starboard.yml  monitor_groups.yaml
sam_drivers/launch/: floatsam_core.launch  notes.txt  sam_controllers.launch  sam_core.launch  sam_depth_ctrl.launch  sam_gui.launch  sam_mission.launch  sam_monitor.launch  sam_payloads.launch  sam_pitch_ctrl.launch  sam_rosbag.launch  sam_uwcomms.launch
sam_drivers/sam_drivers/: sam_joint_state_converter.py  sam_startup_check.py
sam_drivers/scripts/: esc_fb_parser.py  floatsam_bringup.sh  sam_bringup.sh  sam_joint_state_converter.py  sam_startup_check.py
sam_uavcan_bridge/: CMakeLists.txt  README.md  package.xml
sam_uavcan_bridge/dsdl/smarc_uavcan_messages/: 20102.ServoFeedbackDouble.uavcan  20103.SwitchStatus.uavcan  20105.SwitchCommandTimed.uavcan  20106.ThrusterRPM.uavcan  20108.ThrusterFeedback.uavcan  20112.BatteryStateBasic.uavcan  20114.ConsumedCharge.uavcan  20115.ConsumedChargeArray.uavcan  20116.ThrusterRpmID.uavcan  20117.ThrusterFeedbackID.uavcan  20118.SensorLeak.uavcan  20119.ThrusterDcID.uavcan  20120.ThrusterDC.uavcan
sam_uavcan_bridge/dsdl/smarc_uavcan_services/: 201.UpdateBattery.uavcan
sam_uavcan_bridge/include/: canard_interface.h  time_utils.h  uavcan_ros_bridge.h
sam_uavcan_bridge/include/ros_to_uavcan/: array_command.h  ballast_angles.h  command.h  dropweights.h  dual_thruster_rpm.h  dvl.h  led.h  light_command.h  panic.h  percent_stamped.h  sss.h  thruster_angles.h  thruster_rpm.h  thruster_rpm_id.h  thruster_rpms.h  uavcan_node_info.h  uavcan_restart.h  uavcan_transport_stats.h  uavcan_update_battery.h
sam_uavcan_bridge/include/sam_uavcan_bridge/ros_to_uav/: dropweights.h  dual_thruster_rpm.h  dvl.h  led.h  light_command.h  panic.h  sss.h  thruster_angles.h  thruster_dc_id.h  thruster_rpm.h  thruster_rpm_id.h  thruster_rpms.h  uavcan_update_battery.h
sam_uavcan_bridge/include/sam_uavcan_bridge/uav_to_ros/: battery_info.h  battery_state_basic.h  circuit_status_stamped.h  consumed_charge_array.h  consumed_charge_feedback.h  ctd_feedback.h  dual_thruster_feedback.h  leak.h  panic.h  sensor_pressure_stamped.h  servo_feedback_double.h  temperature.h  thruster_feedback_id.h
sam_uavcan_bridge/include/uavcan_to_ros/: actuator_status.h  battery_info.h  battery_state_basic.h  circuit_status_stamped.h  consumed_charge_array.h  consumed_charge_feedback.h  ctd_feedback.h  dual_thruster_feedback.h  esc_status.h  gps_fix.h  imu.h  leak.h  magnetic_field.h  panic.h  pressure.h  sensor_pressure.h  sensor_pressure_stamped.h  servo_feedback_double.h  temperature.h  thruster_feedback_id.h
sam_uavcan_bridge/launch/: bridge.launch
sam_uavcan_bridge/scripts/: setup_vcan.sh
sam_uavcan_bridge/src/: canard_interface.cpp  ros_to_uavcan_bridge.cpp  ros_to_uavcan_services.cpp  ros_to_uavcan_time_master.cpp  time_utils.cpp  uavcan_network_monitor.cpp  uavcan_time_master.cpp  uavcan_to_ros_bridge.cpp  xavier_uavcan.cpp
sam_uavcan_bridge/src/ros_to_uav/: ballast_angles.cpp  dropweights.cpp  dual_thruster_rpm.cpp  dvl.cpp  led.cpp  light_command.cpp  panic.cpp  percent_stamped.cpp  sss.cpp  thruster_angles.cpp  thruster_dc_id.cpp  thruster_rpm.cpp  thruster_rpm_id.cpp  thruster_rpms.cpp  uavcan_update_battery.cpp
sam_uavcan_bridge/src/ros_to_uavcan/: array_command.cpp  ballast_angles.cpp  command.cpp  dropweights.cpp  dual_thruster_rpm.cpp  dvl.cpp  led.cpp  light_command.cpp  panic.cpp  percent_stamped.cpp  sss.cpp  thruster_angles.cpp  thruster_rpm.cpp  thruster_rpm_id.cpp  thruster_rpms.cpp  uavcan_node_info.cpp  uavcan_restart.cpp  uavcan_transport_stats.cpp  uavcan_update_battery.cpp
sam_uavcan_bridge/src/uav_to_ros/: actuator_status.cpp  battery_info.cpp  battery_state_basic.cpp  circuit_status_stamped.cpp  consumed_charge_array.cpp  consumed_charge_feedback.cpp  ctd_feedback.cpp  dual_thruster_feedback.cpp  leak.cpp  panic.cpp  sensor_pressure_stamped.cpp  servo_feedback_double.cpp  temperature.cpp  thruster_feedback_id.cpp
sam_uavcan_bridge/src/uavcan_to_ros/: actuator_status.cpp  battery_info.cpp  battery_state_basic.cpp  circuit_status_stamped.cpp  consumed_charge_array.cpp  consumed_charge_feedback.cpp  ctd_feedback.cpp  dual_thruster_feedback.cpp  esc_status.cpp  gps_fix.cpp  imu.cpp  leak.cpp  magnetic_field.cpp  panic.cpp  pressure.cpp  sensor_pressure.cpp  sensor_pressure_stamped.cpp  servo_feedback_double.cpp  temperature.cpp  thruster_feedback_id.cpp
uavcan_ros_bridge/: CMakeLists.txt
uavcan_ros_bridge/launch/: bridge.launch
uavcan_ros_bridge/src/: ros_to_uavcan_time_master.cpp  uavcan_to_ros_bridge.cpp
uavcan_ros_msgs/: CMakeLists.txt  package.xml
